|
Quick Lists
|
|
Bug ID:
|
6652160
|
|
Votes
|
0
|
|
Synopsis
|
G1: assert(cur_used_bytes == _g1->recalculate_used(),"It should!") at g1CollectorPolicy.cpp:1425
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b06)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
2-High
|
|
Related Bugs
|
6561328
|
|
Submit Date
|
18-JAN-2008
|
|
Description
|
Failures sighted with PRT:-
jbb on sparc32/fastdebug/c2
gcbasher on sparc32/fastdebug/c2
The assertion is not easily reproducible and can often take several
hours (and many 100's of iterations) to hit (tried on Niagara boxes).
Previous races related to this assertion/invariant have been
fixed in 6561328.
Posted Date : 2008-01-18 01:48:04.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
The cause of the bug is the race between the allocation and the concurrent
cleanup for the modification of the G1CollectedHeap::_summary_bytes_used
field (G1CollectedHeap::attempt_allocation_slow() and
ConcurrentMark::completeCleanup()). The quick solution is to just serialize
these modifications.
Posted Date : 2008-07-30 13:46:31.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/c0f8f7790199
Posted Date : 2008-08-28 05:37:44.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |