6652160: G1: assert(cur_used_bytes == _g1->recalculate_used(),"It should!") at g1CollectorPolicy.cpp:1425

In attempt_allocation_slow() wait for the concurrent cleanup to complete before modifying _summary_bytes_used.

Reviewed-by: jmasa, apetrusenko